# audio-browser-kiro

./: .env.example  .gitignore  AGENTS.md  ERROR_HANDLING_IMPLEMENTATION.md  FILTER_SEARCH_IMPLEMENTATION.md  HOVER_FLICKER_FIX.md  METADATA_SYNC_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION.md  REACT_WINDOW_ITEMDATA_FIX.md  README.md  SCAN_FLOW_TESTING.md  SELECTION_HEIGHT_FIX.md  TASK_12.2_VERIFICATION.md  TASK_13.1_VERIFICATION.md  TASK_13.2_VERIFICATION.md  TASK_6.1_VERIFICATION.md  TASK_6.2_VERIFICATION.md  USER_PROMPT.md  VITE_CONFIGURATION.md  WAVEFORM_DISPLAY_VERIFICATION.md  config.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.client.json  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
.kiro/steering/: language.md  product.md  structure.md  tech.md
backend/: main.py  pyproject.toml  requirements.txt
docs/: audio-playback-independence.md
frontend/: package-lock.json
public/: index.html
scripts/: gen_visuals.py  generate-placeholder-images.cjs  test-error-handling.mjs  test-wobble-generation.mjs
src/client/: App.tsx  index.css  index.html  vite-env.d.ts
src/server/: index.ts
src/shared/types/: api.ts  (+9 more)
test-results/: .last-run.json
test-results/visualization-display-Visu-e6a8e-m-components-in-audio-items-chromium/: error-context.md
tests/: setup.ts
tests/client/: App.test.tsx
tests/e2e/: debug-error.spec.ts  homepage-load.spec.ts  visualization-display.spec.ts
tests/integration/: background-generation.test.ts  initialization-flow.test.ts  metadata-sync.test.ts  scan-flow.test.ts
(+114 files in other folders)
